<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.torsh.sharedprefdemo.MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <Switch
        android:text="@string/change_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/edittextName"
        android:id="@+id/editTextN" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/edittextBiz"
        android:id="@+id/editTextB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:text="@string/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveAccountData"
            android:id="@+id/btnS" />

        <Button
            android:text="@string/buttonLoad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="loadAccountData"
            android:id="@+id/btnL" />

    </LinearLayout>

    <Button
        android:text="@string/go_to_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openSecondActivity"
        android:id="@+id/btnA2" />

    <TextView
        android:text="@string/PersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/textViewN" />

    <TextView
        android:text="@string/Business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/textViewB" />


</LinearLayout>
